
New plugin: the Chaos Monkey (killing actors at any time)
 - Along with the new simgrid-monkey script, it tests whether your simulation 
   resists resource failures at any possible timestamp in your simulation. 
 - It is mostly intended to test the simgrid core in extreme conditions, 
   but users may find it interesting too.

XBT:
 - Drop xbt_dynar_shrink().

Fixed bugs (FG#.. -> FramaGit bugs; FG!.. -> FG merge requests)
 (FG: issues on Framagit; GH: issues on GitHub)
 - FG#57: Mc SimGrid should test whether ptrace is usable
 - FG#87: Smpi scripts fail with spaces in paths
 - FG#100: [SMPI] Order of the message matching is not guaranteed
 - FG#101: LGPL 2.1 is deprecated license
 - GH#151: Missing mutexes for DPOR.

----------------------------------------------------------------------------

SimGrid (3.30) January 30. 2022.

The Sunday Bloody Sunday release.

Main user-visible changes:
 - The SimDag API for the simulation of the scheduling of Directed Acyclic
   Graphs has been dropped. It was marked as deprecated for a couple of years.
   We finally complete the implementation of what has been called SimDag++
   internally, i.e., porting the different features of SimDag on top of S4U.
   The new way to simulate the execution of dependent activities directly by
   maestro (without any other actor) is details in the examples/cpp/dag-* series
   of examples.
 - The removal of SimDag led us to also remove the export to Jedule files that
   was tightly coupled to SimDag. The instrumentation of DAG simulation is still
   possible through the regular instrumentation API based on the Paje format.
 - We also dropped the old and clumsy Lua bindings to create platforms in a
   programmatic way. It can be done in C++ in a much cleaner way now, which
   motivates this suppression.

S4U:
 - Introduce on_X_cb() functions for all signals, to attach a new
   callback to the signal X. The signal variables are now hidden and
   only these functions should be used.