@@ -35,6 +35,10 @@ New plugin: the Chaos Monkey (killing actors at any time)
 XBT:
  - Drop xbt_dynar_shrink().
 
+Python:
+ - Added the following bindings: Comm.wait_for() and Comm.wait_any_for()
+   Example: examples/python/comm-waitfor/
+
 Fixed bugs (FG#.. -> FramaGit bugs; FG!.. -> FG merge requests)
  (FG: issues on Framagit; GH: issues on GitHub)
  - FG#57: Mc SimGrid should test whether ptrace is usable
